old-code/sa/ppu/metersphere/ms-selenium-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selenium-hub
  namespace: metersphere2
spec:
  selector:
    matchLabels:
      app: selenium-hub
  replicas: 1
  template:
    metadata:
      labels:
        app: selenium-hub
    spec:
      volumes:
      - name: dshm
        emptyDir:
            medium: Memory
      containers:
        - name: selenium-hub
          image: registry.cn-qingdao.aliyuncs.com/metersphere/seleniarm-grid-all:4.1.4-20220519
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /dev/shm
            name: dshm
---
apiVersion: v1
kind: Service
metadata:
  name: selenium-hub
  namespace: metersphere2
spec:
  ports:
    - name: selenium-hub
      port: 4444
      targetPort: 4444
      nodePort: 30444
  type: NodePort
  selector:
    app: selenium-hub
