old-code/sa/ppu/metersphere/vs-extra.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: metersphere-ex
  namespace: metersphere2
spec:
  gateways:
  - istio-system/main-gw-ops-external
  hosts:
  - ppu-metersphere-ex.slleisure.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: metersphere-gateway.metersphere2.svc.cluster.local
        port:
          number: 8000
